main.tf
moved {
  from = aws_vpc.main
  to   = module.vpc.aws_vpc.main
}

moved {
  from = aws_subnet.public
  to   = module.vpc.aws_subnet.public
}

moved {
  from = aws_internet_gateway.main
  to   = module.vpc.aws_internet_gateway.main
}

moved {
  from = aws_route_table.public
  to   = module.vpc.aws_route_table.public
}

moved {
  from = aws_route_table_association.public
  to   = module.vpc.aws_route_table_association.public
}

module "vpc" {
  source = "./modules/vpc"
}


moved {
  from = aws_instance.web
  to   = module.ec2.aws_instance.web
}

moved {
  from = aws_iam_role.ec2_role
  to   = module.iam.aws_iam_role.ec2_role
}

moved {
  from = aws_iam_role_policy.ec2_s3_read
  to   = module.iam.aws_iam_role_policy.ec2_s3_read
}

moved {
  from = aws_iam_instance_profile.ec2_profile
  to   = module.iam.aws_iam_instance_profile.ec2_profile
}







resource "aws_security_group" "ec2" {
  name        = "terraform-ec2-sg"
  description = "Security group for Terraform EC2 instance"
  vpc_id      = module.vpc.vpc_id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "terraform-ec2-sg"
  }
}

data "aws_ami" "ubuntu" {
  most_recent = true

  owners = ["099720109477"]

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd-gp3/ubuntu-noble-24.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}

module "ec2" {
  source = "./modules/ec2"

  ami_id               = data.aws_ami.ubuntu.id
  instance_type        = var.instance_type
  subnet_id            = module.vpc.subnet_id
  security_group_id    = aws_security_group.ec2.id
  iam_instance_profile = module.iam.instance_profile_name
}

resource "aws_s3_bucket" "terraform_state" {
  bucket = "terraform-aws-infrastructure-state-2026"

  tags = {
    Name = "terraform-state-bucket"
  }
}

resource "aws_s3_bucket_versioning" "terraform_state" {
  bucket = aws_s3_bucket.terraform_state.id

  versioning_configuration {
    status = "Enabled"
  }
}

resource "aws_s3_bucket_public_access_block" "terraform_state" {
  bucket = aws_s3_bucket.terraform_state.id

  block_public_acls       = true
  block_public_policy     = true
  ignore_public_acls      = true
  restrict_public_buckets = true
}

resource "aws_s3_bucket_server_side_encryption_configuration" "terraform_state" {
  bucket = aws_s3_bucket.terraform_state.id

  rule {
    apply_server_side_encryption_by_default {
      sse_algorithm = "AES256"
    }
  }
}


module "iam" {
  source = "./modules/iam"
}
